# claim-verifier

./: .env.example  .gitignore  Design Overview  Dockerfile  Dockerfile.ui  README.md  SKILL.md  docker-compose.yml  main.py  pyproject.toml  repro_ollama.py  reproduce_ollama.py  requirements.txt  start.sh
.agent/: api_ask_quick_reference.md  api_ask_refactoring_summary.md
.agent/workflows/: check_existing_code.md  use_venv.md
.streamlit/: config.toml
scripts/: check_duplicate_claims.py  claim_extractor_all.py  index_document_chunks.py  ingest_all.py  migrate_evidence.py  repro_sparse_error.py  run_full_pipeline.py  run_verification.py
src/: config.py  models.py
src/api/: routes.py
src/claim_extraction/: entity_filter.py  llm_extractor.py  normalizer.py  pipeline.py
src/data_ingest/: financials.py  storage.py  transcripts.py
src/db/: connection.py  migrations.py  schema.py
src/rag/: indexer.py  pipeline.py  reranker.py  retriever.py  smart_retrieval.py
src/ui/: app.py
src/verifier/: deterministic.py  llm_verifier.py  pipeline.py
tests/integration/: test_ask_endpoint.py  test_claim_extraction_from_real_db_data.py  test_data_availability_real_db.py  test_db_connection_and_vector_insert.py  test_ingestion_full_flow_real_api.py  test_verification_end_to_end_real_db.py
tests/unit/: test_api_endpoints_mocked.py  test_claim_extraction_entity_filter.py  test_claim_extraction_llm_parsing.py  test_claim_extraction_pipeline_mocked.py  test_claim_extraction_with_mock_llm.py  test_rag_chunking_logic.py  test_rag_indexing_and_retrieval_mocked.py  (+6 more)
